gitops/manifests/flask-app/base/network-policy.yaml
#gitops/manifests/flask-app/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-api-deny-all
  namespace: devsecops-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsecops-api
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-api-allow-cloudflared
  namespace: devsecops-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsecops-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app: cloudflared
    ports:
    - port: 5000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-api-allow-prometheus
  namespace: devsecops-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsecops-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - port: 5000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-api-allow-egress-dns
  namespace: devsecops-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsecops-api
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
